@@ -3763,6 +3763,14 @@ static void addPlayer(int playerIndex)
   // reject player if asks for bogus team or rogue and rogues aren't allowed
   // or if the team is full.
 
+  // strip any non-printable characters from callsign
+  char *sp=player[playerIndex].callSign, *tp=sp;
+  do {
+    if (isprint(*sp))
+      *tp++=*sp;
+  } while (*++sp);
+  *tp=*sp;
+
   // look if there is as name clash, we won't allow this
   int i;
   for (i = 0; i < maxPlayers; i++)
